获取用户信息，检查用户
