# model/args/const.go
@@ -1,1 +1,11 @@
 package args
+
+type MerchantsMaterialInfo struct {
+	Uid          int64
+	MaterialId   int64
+	RegisterAddr string
+	HealthCardNo string
+	Identity     int32
+	State        int32
+	TaxCardNo    string
+}
