# proto/micro_mall_users_proto/users/users.swagger.json
@@ -37,7 +37,7 @@
         ]
       }
     },
-    "/v1/user/merchants/associate/shop": {
+    "/v1/user/merchants/associate/shop_business": {
       "put": {
         "summary": "商户关联店铺",
         "operationId": "MerchantsAssociateShop",
@@ -268,6 +268,12 @@
         },
         "tax_card_no": {
           "type": "string"
+        },
+        "create_time": {
+          "type": "string"
+        },
+        "update_time": {
+          "type": "string"
         }
       }
     },
@@ -276,6 +282,9 @@
       "properties": {
         "info": {
           "$ref": "#/definitions/usersMerchantsMaterialInfo"
+        },
+        "operation_type": {
+          "$ref": "#/definitions/usersOperationType"
         }
       }
     },
@@ -284,15 +293,32 @@
       "properties": {
         "common": {
           "$ref": "#/definitions/usersCommonResponse"
+        },
+        "material_id": {
+          "type": "string",
+          "format": "int64"
         }
       }
+    },
+    "usersOperationType": {
+      "type": "string",
+      "enum": [
+        "CREATE",
+        "UPDATE",
+        "DELETE",
+        "AUDIT"
+      ],
+      "default": "CREATE"
     },
     "usersRetCode": {
       "type": "string",
       "enum": [
         "SUCCESS",
         "ERROR",
-        "USER_NOT_EXIST"
+        "USER_NOT_EXIST",
+        "USER_EXIST",
+        "MERCHANT_NOT_EXIST",
+        "MERCHANT_EXIST"
       ],
       "default": "SUCCESS"
     },
@@ -344,6 +370,9 @@
           "format": "int32"
         },
         "create_time": {
+          "type": "string"
+        },
+        "update_time": {
           "type": "string"
         }
       }
